<resources>
    <string name="app_name">수익얼마</string>
    <string name="default_notification_channel_id">AlertChannel</string>

    <string name="Common_proceeds">수익금</string>
    <string name="Common_term">기간</string>
    <string name="Common_hint_term">기간을 입력해주세요.</string>
    <string name="Common_gains_losses">손익</string>
    <string name="Common_realization_gains_losses">실현손익</string>
    <string name="Common_GainPercent">수익률</string>
    <string name="Common_subject">종류</string>
    <string name="Common_hint_subject">종류를 입력해주세요.</string>
    <string name="Common_date_of_sale_and_subject_name">매매일\n종목명</string>
    <string name="Common_date_of_sale_and_subject_name_data">%s \n %s</string>
    <string name="Common_real_gains_losses_amount_and_gain_percent">순손익금액\n수익률</string>
    <string name="Common_real_gains_losses_amount_and_gain_percent_data">%s \n %s</string>
    <string name="Common_purchase_price_and_sell_price">매수단가\n매도단가</string>
    <string name="Common_purchase_price_and_sell_price_data">%s \n %s</string>
    <string name="Common_Ok">확인</string>
    <string name="Common_Add">추가</string>
    <string name="Common_Modify">수정</string>
    <string name="Common_Delete">삭제</string>
    <string name="Common_Complete">완료</string>
    <string name="Common_Cancel">취소</string>
    <string name="Common_False">false</string>
    <string name="Common_True">true</string>
    <string name="Common_Dummy_Data">-</string>
    <string name="Common_All">전체</string>
    <string name="Common_Edit">편집</string>
    <string name="Common_Sell">매도</string>
    <string name="Common_Gain">이익</string>
    <string name="Common_Loss">손해</string>
    <string name="Common_Name">이름</string>
    <string name="Common_Email">이메일</string>
    <string name="Common_Refresh">새로고침</string>
    <string name="Common_BackButton_AppClose_Message">종료하시려면 한번 더 눌러주세요.</string>
    <string name="Common_Notice_Delete_Check">삭제하시겠습니까?</string>
    <string name="Common_Notice_Delete_Ok">삭제완료</string>
    <string name="Common_Notice_Add_Ok">추가완료</string>
    <string name="Common_Notice_Modify_Ok">수정완료</string>

    <string name="IncomeNoteFragment_Title">수익 노트</string>
    <string name="IncomeNoteFragment_Gain">수익</string>
    <string name="IncomeNoteFragment_Purchase_Price">매수금액</string>
    <string name="IncomeNoteFragment_Sell_Price">매도금액</string>
    <string name="IncomeNoteFragment_Sell_Count">매도수량</string>
    <string name="IncomeNoteFragment_Purchase_Date">매수일</string>
    <string name="IncomeNoteFragment_Sell_Date">매도일</string>
    <string name="IncomeNoteFragment_SubjectName">종목명</string>
    <string name="IncomeNoteFragment_SearchBar_Hint">종목명으로 검색하세요.</string>
    <string name="IncomeNoteFragment_Term">기간</string>
    <string name="IncomeNoteFragment_All_Search">전체 기간</string>

    <string name="EditIncomeNoteDialog_SubjectName_Hint">매매한 회사 이름</string>
    <string name="EditIncomeNoteDialog_Purchase_Date_Hint">매수한 날짜</string>
    <string name="EditIncomeNoteDialog_Sell_Date_Hint">매도한 날짜</string>
    <string name="EditIncomeNoteDialog_Purchase_Price_Hint">1주당 매수한 평단가</string>
    <string name="EditIncomeNoteDialog_Sell_Price_Hint">1주당 매도한 평단가</string>
    <string name="EditIncomeNoteDialog_Sell_Count_Hint">매도한 수량</string>
    <string name="EditIncomeNoteDialog_Error_Message">값을 모두 입력해야합니다.</string>
    <string name="EditIncomeNoteDialog_Error_Message_Zero">매수, 매도 가격을 0으로 설정할 수 없습니다.</string>

    <string name="IncomeNoteFilterDialog_Title">필터링 할 옵션을 선택하세요.</string>

    <string name="MemoReadWriteActivity_Title_Hint">제목을 입력하세요.</string>
    <string name="MemoReadWriteActivity_Content_Hint">내용을 입력하세요.</string>
    <string name="MemoListFragment_Title">메모장</string>
    <string name="MemoListFragment_GuideMessage">첫 메모를 등록해주세요.</string>
    <string name="MemoListFragment_Delete_Check_Message">정말 삭제하시겠습니까?</string>
    <string name="MemoListFragment_Empty_Data_Message">내용이 없어 메모를 저장하지 않습니다.</string>
    <string name="MemoListFragment_Write_Memo">메모를 입력해주세요.</string>
    <string name="MemoListFragment_Msg_Check_Add_Mode_Cancel_Memo">입력중인 메모가 있습니다. 취소 하시겠습니까?</string>
    <string name="MemoListFragment_Msg_Check_Update_Mode_Cancel_Memo">변경 내용이 저장되지 않았습니다. 변경 내용을 삭제하시겠습니까?</string>

    <string name="MyStockFragment_Title">나의 주식</string>
    <string name="MyStockFragment_Total_Evaluation_Amount">총 평가금액</string>
    <string name="MyStockFragment_Total_Purchase_Price">총 매수금액</string>
    <string name="MyStockFragment_Purchase_Average">평균단가</string>
    <string name="MyStockFragment_Current_Price">현재가</string>
    <string name="MyStockFragment_Holding_Quantity">보유수량</string>
    <string name="MyStockFragment_Gain">수익</string>
    <string name="MyStockFragment_Purchase_Date">매수일</string>
    <string name="MyStockFragment_Notice_Max_List">최대 10개까지 등록 할 수 있습니다.</string>
    <string name="MyStockFragment_Sell_Price">매도단가</string>
    <string name="MyStockFragment_Sell_Price_Hint">1주당 매도한 평균 단가</string>
    <string name="MyStockFragment_Sell_Count">매도수량</string>
    <string name="MyStockFragment_Sell_Count_Hint">총 매도수량</string>
    <string name="MyStockFragment_Msg_MyStock_Add_Success">추가 완료 됐습니다.</string>
    <string name="MyStockFragment_Msg_MyStock_Modify_Success">수정 완료 됐습니다.</string>
    <string name="MyStockFragment_Msg_Current_Price_Refresh_Success">새로고침에 성공했습니다.</string>
    <string name="MyStockFragment_Msg_Current_Price_Refresh_Error">새로운 데이터를 불러오지 못했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="MyStockFragment_Msg_Current_Price_Refresh_Warning">나의 보유 주식을 추가해주세요.</string>

    <string name="MyStockInputDialog_Error_Message_Sell_Count">판매수량을 입력해주세요.</string>
    <string name="MyStockInputDialog_Error_Message_Sell_Count_Over">판매 수량은 보유 수량을 넘을 수 없습니다.</string>
    <string name="MyStockInputDialog_Purchase_Count">보유수량</string>
    <string name="MyStockInputDialog_Purchase_Count_Hint">보유한 주식 수</string>
    <string name="MyStockInputDialog_Purchase_Price_Hint">1주당 매수한 평균 금액</string>
    <string name="MyStockInputDialog_Error_Message">필수 값을 모두 입력해주세요.</string>
    <string name="MyStockInputDialog_Error_Message_Purchase_Count">보유수량을 입력해주세요.</string>
    <string name="MyStockInputDialog_DBSaveError_Message">데이터베이스 문제로 저장에 실패했습니다.</string>

    <string name="MyFragment_Title">마이</string>

    <string name="Login_Google_Id_Login">구글 아이디 로그인</string>
    <string name="Login_Naver_Id_Login">네이버 아이디 로그인</string>
    <string name="Login_Kakao_Id_Login">페이스북 아이디 로그인</string>
    <string name="Login_User_Input_Dialog_Title">필수 정보 제공에 동의하지 않았습니다.\n서비스를 이용하기 위해 필수 정보를 입력해주세요.</string>
    <string name="Login_Naver_Necessary_Info_Check">필수 정보 제공 항목에 동의해주세요.</string>
    <string name="Login_Naver_Login_Error_Msg">일시적 오류가 발생했습니다. 잠시 후 다시 시도해주세요. msg: %s</string>

    <string name="My_Account">님의 계정</string>
    <string name="My_Logout">로그아웃</string>
    <string name="My_Auto_Login">자동 로그인</string>
    <string name="My_Member_Off">회원탈퇴</string>
    <string name="My_MyStock_Auto_Refresh">자동 새로고침</string>
    <string name="My_MyStock_Auto_Add">매도 후 손익노트 자동 등록</string>
    <string name="My_MyStock_Show_Delete_Dialog">삭제 시 확인 창 띄우기</string>
    <string name="My_Memo_Long_Click_Vibrate">삭제 모드 진입 시 진동 켜기</string>

    <string name="My_Msg_Logout_Check">로그아웃 하시겠습니까?</string>
    <string name="My_Msg_Member_Off_Check">회원 탈퇴 하시겠습니까?</string>

    <string name="facebook_app_id">2928940814012749</string>
    <string name="fb_login_protocol_scheme">fb2928940814012749</string>

    <string name="Error_Msg_Not_Found_Data">값을 불러올 수 없습니다.</string>
    <string name="Error_Msg_Network_Connect_Exception">네트워크 연결 상태를 확인해주세요.</string>
    <string name="Error_Msg_Normal">일시적 오류가 발생했습니다. 잠시 후 다시 시도해주세요.</string>
    <string name="Error_Msg_Naver_Info_Not_Agree">필수 항목 제공 동의를 체크해주세요.</string>
</resources>