<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.yjpapp.stockportfolio.common.StockConfig"/>
        <variable
            name="convertText"
            type="String" />

        <variable
            name="data"
            type="com.yjpapp.stockportfolio.function.mystock.dialog.MyStockInputDialog.MyStockInputDialogData" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EditMainDialog_MainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="@dimen/common_30dp"
        android:layout_marginEnd="@dimen/common_30dp"
        android:background="@drawable/bg_ffffff_r12"
        >

        <TextView
            android:id="@+id/txt_subject_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/IncomeNoteFragment_SubjectName"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_subject_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_10dp"
            android:layout_marginEnd="@dimen/common_20dp"
            android:background="@drawable/border_line_bottom"
            android:hint="@string/EditIncomeNoteDialog_SubjectName_Hint"
            android:cursorVisible="false"
            android:focusable="false"
            android:text="@{data.subjectName}"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_subject_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_subject_name"
            app:layout_constraintTop_toTopOf="@+id/txt_subject_name" />

        <TextView
            android:id="@+id/txt_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_30dp"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/IncomeNoteFragment_Purchase_Date"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_subject_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_purchase_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_10dp"
            android:background="@drawable/border_line_bottom"
            android:cursorVisible="false"
            android:focusable="false"
            android:text="@{data.purchaseDate}"
            android:hint="@string/EditIncomeNoteDialog_Purchase_Date_Hint"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_date"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_date"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_date" />


        <TextView
            android:id="@+id/txt_purchase_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_30dp"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/MyStockFragment_Purchase_Average"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_date" />

        <TextView
            android:id="@+id/txt_purchase_price_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{StockConfig.INSTANCE.moneySymbol}"
            android:textColor="@color/color_666666"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_count"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_price"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_date" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_purchase_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_2dp"
            android:layout_marginEnd="@dimen/common_20dp"
            android:background="@drawable/border_line_bottom"
            android:hint="@string/MyStockInputDialog_Purchase_Price_Hint"
            android:inputType="number"
            android:text="@{data.purchasePrice}"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_price_symbol"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_price"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txt_purchase_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_30dp"
            android:layout_marginBottom="@dimen/common_30dp"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/MyStockFragment_Holding_Quantity"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_cancel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_price" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_purchase_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_line_bottom"
            android:hint="@string/MyStockInputDialog_Purchase_Count_Hint"
            android:inputType="number"
            android:text="@{data.purchaseCount}"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_count"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_count"
            android:importantForAutofill="no"
            />

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_50dp"
            android:background="@drawable/bg_f1f1f1_r12_bottom_left"
            android:gravity="center"
            android:text="@string/Common_Cancel"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_complete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <!--    <View-->
        <!--        android:layout_width="@dimen/common_1dp"-->
        <!--        android:layout_height="@dimen/common_50dp"-->
        <!--        android:background="@color/color_line_1a000000"-->
        <!--        app:layout_constraintBottom_toBottomOf="parent"-->
        <!--        app:layout_constraintStart_toEndOf="@+id/txt_cancel" />-->

        <TextView
            android:id="@+id/txt_complete"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_50dp"
            android:background="@drawable/bg_e52b4e_r12_bottom_right"
            android:gravity="center"
            android:text="@string/Common_Complete"
            android:textColor="@color/color_ffffff"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_cancel"
            app:layout_constraintWidth_percent="0.5" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
