<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="com.yjpapp.stockportfolio.constance.AppConfig"/>
        <variable
            name="viewModel"
            type="com.yjpapp.stockportfolio.ui.mystock.MyStockViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/EditMainDialog_MainContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/color_ffffff"
        >

        <TextView
            android:id="@+id/txt_subject_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/IncomeNoteFragment_SubjectName"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_subject_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_10dp"
            android:layout_marginEnd="@dimen/common_20dp"
            android:background="@drawable/border_line_bottom"
            android:hint="@string/EditIncomeNoteDialog_SubjectName_Hint"
            android:text="@{viewModel.inputDialogSubjectName}"
            android:textSize="@dimen/common_15dp"
            android:onTextChanged="@{viewModel::onSubjectNameChange}"
            app:layout_constraintBottom_toBottomOf="@+id/txt_subject_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_subject_name"
            app:layout_constraintTop_toTopOf="@+id/txt_subject_name" />

        <TextView
            android:id="@+id/txt_purchase_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_30dp"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/IncomeNoteFragment_Purchase_Date"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_price"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_subject_name" />

        <EditText
            android:id="@+id/et_purchase_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_10dp"
            android:background="@drawable/border_line_bottom"
            android:cursorVisible="false"
            android:focusable="false"
            android:hint="@string/EditIncomeNoteDialog_Purchase_Date_Hint"
            android:text="@{viewModel.inputDialogPurchaseDate}"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/common_15dp"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_date"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_date"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_date" />


        <TextView
            android:id="@+id/txt_purchase_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_30dp"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/MyStockFragment_Purchase_Average"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_count"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_date" />

        <TextView
            android:id="@+id/txt_purchase_price_symbol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@{AppConfig.INSTANCE.moneySymbol}"
            android:textColor="@color/color_666666"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/txt_purchase_count"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_price"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_date" />

        <EditText
            android:id="@+id/et_purchase_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_2dp"
            android:layout_marginEnd="@dimen/common_20dp"
            android:background="@drawable/border_line_bottom"
            android:hint="@string/MyStockInputDialog_Purchase_Price_Hint"
            android:inputType="number"
            android:textColor="@color/color_222222"
            android:text="@{viewModel.inputDialogPurchasePrice}"
            android:textSize="@dimen/common_15dp"
            android:onTextChanged="@{viewModel::onPurchasePriceChange}"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_price_symbol"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_price"
            android:importantForAutofill="no" />

        <TextView
            android:id="@+id/txt_purchase_count"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_30dp"
            android:layout_marginBottom="@dimen/common_30dp"
            android:layout_marginStart="@dimen/common_20dp"
            android:text="@string/MyStockFragment_Holding_Quantity"
            android:textColor="@color/color_666666"
            android:textSize="@dimen/common_16dp"
            app:layout_constraintBottom_toTopOf="@+id/bottom_line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_purchase_price" />

        <EditText
            android:id="@+id/et_purchase_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/common_10dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/border_line_bottom"
            android:hint="@string/MyStockInputDialog_Purchase_Count_Hint"
            android:inputType="number"
            android:text="@{viewModel.inputDialogPurchaseCount}"
            android:textColor="@color/color_222222"
            android:textSize="@dimen/common_15dp"
            android:onTextChanged="@{viewModel::onPurchaseCountChange}"
            app:layout_constraintBottom_toBottomOf="@+id/txt_purchase_count"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_purchase_count"
            app:layout_constraintTop_toTopOf="@+id/txt_purchase_count"
            android:importantForAutofill="no"
            />

        <View
            android:id="@+id/bottom_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/common_1dp"
            android:background="@color/color_line_1a000000"
            app:layout_constraintBottom_toTopOf="@+id/txt_cancel" />

        <TextView
            android:id="@+id/txt_cancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_50dp"
            android:gravity="center"
            android:text="@string/Common_Cancel"
            android:textSize="@dimen/common_15dp"
            android:textColor="@color/color_e52b4e"
            android:onClick="onCancelButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/txt_complete"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <View
            android:layout_width="@dimen/common_1dp"
            android:layout_height="@dimen/common_50dp"
            android:background="@color/color_line_1a000000"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_cancel" />

        <TextView
            android:id="@+id/txt_complete"
            android:layout_width="0dp"
            android:layout_height="@dimen/common_50dp"
            android:gravity="center"
            android:text="@string/Common_Complete"
            android:textSize="@dimen/common_15dp"
            android:textColor="@color/color_222222"
            android:onClick="onCompleteButtonClick"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txt_cancel"
            app:layout_constraintWidth_percent="0.5"

            />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
